[gd_scene load_steps=6 format=3 uid="uid://why1j1d0jdod"]

[ext_resource type="Texture2D" uid="uid://cl1v8mv3xrr1n" path="res://sprites/train/locomotive.svg" id="1_1112r"]
[ext_resource type="Script" uid="uid://bsgkla4jwy1sj" path="res://scripts/train/train.gd" id="1_iopkt"]
[ext_resource type="PackedScene" uid="uid://divpanawlyn4y" path="res://scenes/train/car.tscn" id="3_1nbj4"]
[ext_resource type="Texture2D" uid="uid://bwbjqsd7al24f" path="res://sprites/train/car_square.svg" id="3_v1erj"]
[ext_resource type="Texture2D" uid="uid://cyndlu6uwk4jw" path="res://sprites/train/car_triangle.svg" id="4_cdfji"]

[node name="Train" type="Node2D" node_paths=PackedStringArray("cars")]
script = ExtResource("1_iopkt")
cars = [NodePath("CircleCar"), NodePath("SquareCar"), NodePath("TriangleCar")]

[node name="Locomotive" type="Sprite2D" parent="."]
texture = ExtResource("1_1112r")

[node name="CircleCar" parent="." instance=ExtResource("3_1nbj4")]
position = Vector2(128, 24)

[node name="SquareCar" parent="." instance=ExtResource("3_1nbj4")]
position = Vector2(216, 24)
texture = ExtResource("3_v1erj")
expected_shape_type = "square"

[node name="TriangleCar" parent="." instance=ExtResource("3_1nbj4")]
position = Vector2(304, 24)
texture = ExtResource("4_cdfji")
expected_shape_type = "triangle"
